--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,16 +1,13 @@
-@forward './authentication';
-@forward './badges';
-@forward './button';
-@forward './breadcrumb';
-@forward './carousel';
-@forward './card';
-@forward './header';
-@forward './input';
-@forward './offcanvas';
-@forward './search';
-@forward './modal';
-@forward './swiper';
-@forward './tooltip';
-@forward './topbar';
-@forward './footer';
-@forward './preloader';
+@forward "./authentication";
+@forward "./badges";
+@forward "./button";
+@forward "./breadcrumb";
+@forward "./card";
+@forward "./header";
+@forward "./input";
+@forward "./offcanvas";
+@forward "./search";
+@forward "./modal";
+@forward "./tooltip";
+@forward "./footer";
+@forward "./preloader";
