--- a/scss/components/card/_index.scss
+++ b/scss/components/card/_index.scss
@@ -1,7 +1,1 @@
-@forward './ratedcard';
-@forward './servicecard';
-@forward './featurecard';
-@forward './popularcard';
-@forward './reviewcard';
-@forward './cardreview';
-@forward './cardservice';
+@forward "./counter";
