--- a/scss/reset/_reset.scss
+++ b/scss/reset/_reset.scss
@@ -103,13 +103,13 @@ video {
   margin: 0;
 
   &::selection {
-    @include setBgColor($btnbg, $headingText);
+    // @include setBgColor($btnbg, $headingText);
   }
 }
 
 body {
-  @include setBgColor($bodybg, $primaryText);
-  @include font($primaryFont, 14, light, normal, 19.6);
+  // @include setBgColor($bodybg, $primaryText);
+  // @include font($primaryFont, 14, light, normal, 19.6);
   text-rendering: optimizeSpeed;
   overflow-x: hidden;
   margin: 0;
@@ -125,11 +125,11 @@ h3,
 h4,
 h5,
 h6 {
-  color: $headingText;
+  // color: $headingText;
   margin: 0;
 
   &::selection {
-    @include setBgColor($btnbg, $headingText);
+    // @include setBgColor($btnbg, $headingText);
   }
 }
 
