--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -1,4 +1,43 @@
-// DEFAULT COLORS
+$time: 350ms;
 
+// DEFAULT COLORS
+$bodybg: hsl(220, 18%, 97%); //#F5F6F8
 $white: hsl(0, 0%, 100%); //#ffffff
 $black: hsl(0, 0%, 0%); //#000000
+
+// THEME COLORS
+$primary: hsl(211, 97%, 60%); //#3898FC
+
+$danger: hsl(320, 66%, 49%); //#CE2A96
+$success: hsl(119, 39%, 62%); //#78C377
+
+// TEXT COLORS
+$textPrimary: hsl(210, 21%, 33%); //#425466
+
+$gray-100: hsl(204, 45%, 98%); //#F7FAFC
+$gray-200: hsl(210, 38%, 95%); //#EDF2F7
+$gray-300: hsl(214, 32%, 91%); //#E2E8F0
+$gray-400: hsl(211, 25%, 84%); //#CBD5E0
+$gray-500: hsl(214, 20%, 69%); //#A0AEC0
+$gray-600: hsl(216, 15%, 52%); //#718096
+$gray-700: hsl(218, 17%, 35%); //#4A5568
+$gray-800: hsl(218, 23%, 23%); //#2D3748
+$gray-900: hsl(220, 26%, 14%); //#1A202C
+
+$checkbg: rgba(5, 16, 51, 0.0001);
+
+$footerText: hsl(0, 0%, 72%); //#B7B7B7
+
+// BORDER-COLORS
+$headerborder: rgba(56, 152, 252, 0.2);
+$checkborder: hsl(217, 14%, 81%); //#C9CED6
+
+// SHADOWS
+$shadow-1: rgba(12, 26, 75, 0.1);
+$shadow-2: rgba(20, 37, 63, 0.08);
+$shadow-3: rgba(0, 0, 0, 0.07);
+
+// BOX-SHADOWS
+$dropdownshadow: 0 0 0.0625rem $shadow-1, 0 1.875rem 2.5rem $shadow-2;
+$inputshowdow: drop-shadow(0 0.1875rem 0.25rem $shadow-3);
+$videoshadow: inset 0 -0.0625rem 0 $gray-200;
