--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -7,8 +7,9 @@ $black: hsl(0, 0%, 0%); //#000000
 
 // THEME COLORS
 $primary: hsl(211, 97%, 60%); //#3898FC
+$primary-dark: hsl(207, 100%, 28%); //#004D8D
 
-$danger: hsl(320, 66%, 49%); //#CE2A96
+$danger: hsl(353, 92%, 39%); //#BD081C
 $success: hsl(119, 39%, 62%); //#78C377
 
 // TEXT COLORS
