login, register completed

--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -14,6 +14,7 @@ $success: hsl(119, 39%, 62%); //#78C377
 
 // TEXT COLORS
 $textPrimary: hsl(210, 21%, 33%); //#425466
+$textPlaceholder: hsl(240, 6%, 73%); //B5B5BD
 
 $gray-100: hsl(204, 45%, 98%); //#F7FAFC
 $gray-200: hsl(210, 38%, 95%); //#EDF2F7
