--- a/scss/pages/_authentication.scss
+++ b/scss/pages/_authentication.scss
@@ -1,2 +1,139 @@
 @use "../global" as *;
 @use "../partials" as *;
+
+.authentication {
+  padding: size(48) size(4);
+  min-height: 100vh;
+
+  @include breakpoint(tab992) {
+    padding: size(64) size(4);
+  }
+}
+
+.authenticationform {
+  @include flex-column;
+  gap: size(40);
+  background: $white;
+  @include radius(16);
+  padding: size(32) size(16);
+
+  @include breakpoint(tab992) {
+    padding: size(48) size(32);
+  }
+
+  &-header {
+    @include flex-center-column;
+    gap: size(24);
+    text-align: center;
+
+    .logo {
+      width: size(190);
+      height: size(48);
+      @include flex-center;
+      overflow: hidden;
+      padding: size(8);
+
+      img {
+        @include wh100;
+        object-fit: cover;
+      }
+    }
+
+    .titlebox {
+      max-width: size(324);
+
+      .title {
+        color: $gray-700;
+        @include font($primaryFont, 24, normal, normal, 33.6);
+
+        @include breakpoint(mobile768) {
+          font-size: size(32);
+        }
+      }
+    }
+  }
+
+  &-body {
+    @include flex-column;
+    gap: size(24);
+    margin-bottom: size(24);
+
+    @include breakpoint(tab992) {
+      margin-bottom: size(40);
+    }
+
+    .info {
+      @include flex-column;
+      gap: size(10);
+
+      .forgotlink {
+        .link {
+          color: $gray-400;
+          @include font($primaryFont, 14, medium, normal, 17);
+          @include transitionscolor;
+
+          @include hover {
+            color: $primary;
+          }
+        }
+      }
+    }
+
+    .inputbox {
+      @include flex-column;
+      gap: size(8);
+
+      .inputlabel {
+        color: $textPrimary;
+        @include font($primaryFont, 14, medium, normal, 17);
+      }
+
+      .inputfield {
+        @include setBgColor($white, $gray-900);
+        @include border(solid, 1, $gray-300);
+        @include radius(6);
+        @include font($primaryFont, 14, medium, normal, 17);
+        padding: size(13.5) size(16);
+        @include transitionsall;
+
+        &::placeholder {
+          color: $textPlaceholder;
+        }
+
+        &:focus {
+          border-color: $primary;
+        }
+      }
+    }
+  }
+
+  &-footer {
+    @include flex-center-column;
+    gap: size(24);
+
+    .submit {
+      width: size(185);
+    }
+
+    .authentictext {
+      @include flex-center;
+      text-align: center;
+      gap: size(16);
+
+      .text {
+        color: $gray-600;
+        @include font($primaryFont, 14, medium, normal, 17);
+      }
+
+      .link {
+        color: $primary;
+        @include font($primaryFont, 14, medium, normal, 17);
+        @include transitionscolor;
+
+        @include hover {
+          color: $primary-dark;
+        }
+      }
+    }
+  }
+}
