--- a/scss/components/button/_button.scss
+++ b/scss/components/button/_button.scss
@@ -23,3 +23,17 @@ button,
 
 .btn-upload {
 }
+
+.btn-submit {
+  @include setBgColor($primary, $white);
+  @include w100;
+  @include font($primaryFont, 18, normal, normal, 18);
+  display: inline-block;
+  padding: size(14) size(40);
+  text-align: center;
+  @include transitionsbackground;
+
+  @include hover {
+    background: $primary-dark;
+  }
+}
