--- a/scss/global/_colors.scss
+++ b/scss/global/_colors.scss
@@ -33,6 +33,7 @@ $footerText: hsl(0, 0%, 72%); //#B7B7B7
 // BORDER-COLORS
 $headerborder: rgba(56, 152, 252, 0.2);
 $checkborder: hsl(217, 14%, 81%); //#C9CED6
+$searchborder: rgba(144, 160, 183, 0.3);
 
 // SHADOWS
 $shadow-1: rgba(12, 26, 75, 0.1);
